--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: 25px 50px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -10,4 +10,26 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+fieldset {
+  text-align: left;
+  padding: 5px 20px;
+  margin: 0 100px;
+  line-height: 200%;
+  width: 80%;
+}
+
+fieldset, input {
+  margin-left: 10px;
+}
+
+.topnav {
+  background-color: lightgray;
+  height: 30px;
+}
+
+li {
+  padding: 0% 10%;
+  list-style-type: none;
 }
